Fixing CPA jobs alignment issue

--- a/css/cpajobs.css
+++ b/css/cpajobs.css
@@ -3115,6 +3115,9 @@ a.flex_button.flex_button_light:hover {
 .bkg-muted {
   background-color: #EAF1F3;
 }
+.flex-mtrout {
+  margin-top: 18px;
+}
 .flex_tooltip {
   position: absolute;
   z-index: 5100;
